# want_to_have_a_pie

./: README.md  pyproject.toml  recipe_recommendations.html
src/want_to_have_a_pie/: crew.py  main.py
src/want_to_have_a_pie/config/: agents.yaml  tasks.yaml
src/want_to_have_a_pie/tools/: vision_tool.py
