[project]
name = "want_to_have_a_pie"
version = "0.1.0"
description = "want_to_have_a_pie using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
want_to_have_a_pie = "want_to_have_a_pie.main:run"
run_crew = "want_to_have_a_pie.main:run"
train = "want_to_have_a_pie.main:train"
replay = "want_to_have_a_pie.main:replay"
test = "want_to_have_a_pie.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
